removed fixed from background pos for about (not supported by iOS) added webkit to backdrop-filter on .banner-home to make accessible on Safari

--- a/responsive.css
+++ b/responsive.css
@@ -10,6 +10,7 @@
         margin-top: -2.5rem;
         background-color: rgba(255, 255, 255, 0.4);
         backdrop-filter: blur(28px);
+        -webkit-backdrop-filter: blur(28px);
         box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
         border: 1px solid rgba(255, 255, 255, 0.3);
         border-radius: 8px;
